# Product-Design-Direction-AI-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  README.md  USAGE.md  build_exe.py  build_log.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
STEP/: 326010012.step  326010013.step  326010881.step
src/standard_parts_ai/: __init__.py  __main__.py  _tesseract.py  _text_utils.py  app.py  cli.py  generators.py  gui_main.py  image_parser.py  models.py  pdf_parser.py  standards.py
test_output/: 3260000034.step  M1.4x5.step  M3x8.step  M5.0x12.step  M5x12.step  M5x12_countersunk.step  M5x12_frenet_thread.step  M5x12_pan.step  M5x12_round.step  M5x12_socket.step  M5x12_sweep_thread.step  countersunk_cross_sharp.step  csk_head_only.step  debug_M3x8.step  debug_M3x8_v2.step  pan_cross_flat.step  round_cross_flat.step  round_head_only.step  socket_hex_flat.step  socket_hex_sharp.step  sweep_test.step  test_M3x8.step  thread_major_r.step  thread_no_frenet.step  thread_only.step  thread_w_0.05.step  thread_w_0.1.step  thread_w_0.15.step
test_review/: M1x5.step  M2x8.step  M5x12.step
tests/: __init__.py  test_generators.py  test_image_parser.py  test_pdf_parser.py
